--- a/03_samyukta/SA_04/SA4_1.md
+++ b/03_samyukta/SA_04/SA4_1.md
@@ -11,71 +11,76 @@ next: ../SA_05/index.html
 ## [4. Truths](index.html)
 ### 1. Turning the Dharma Wheel
 
-1\. Thus I have heard: One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed five monks, “This is the noble truth of suffering. It’s a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening. These are the noble truths of suffering’s accumulation, suffering’s cessation, and the path to suffering’s cessation. They are teachings never heard before that should be rightly considered. They then give rise to vision, knowledge, insight, and awakening.
+2\. It was then that the Bhagavān addressed five monks, “This is the noble truth of suffering. It’s a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening. This is the noble truth of suffering’s accumulation … suffering’s cessation … the path to suffering’s cessation. It’s a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p2}
 
-3\. “Furthermore, knowledge of this noble truth of suffering should again be known. This is a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+3\. “Furthermore, knowledge of this noble truth of suffering should again be known. This is a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p3}
 
-4\. “After knowing this noble truth of suffering’s accumulation, [that accumulation] should be stopped. This is a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+4\. “After knowing this noble truth of suffering’s accumulation, [that accumulation] should be stopped. This is a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p4}
 
-5\. “Furthermore, after knowing this noble truth of suffering’s cessation, [that cessation] should be realized. This is a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+5\. “Furthermore, after knowing this noble truth of suffering’s cessation, [that cessation] should be realized. This is a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p5}
 
-6\. “Furthermore, after knowing this noble truth of the path to suffering’s cessation, [that path] should be cultivated. This is a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+6\. “Furthermore, after knowing this noble truth of the path to suffering’s cessation, [that path] should be cultivated. This is a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p6}
 
-7\. “Furthermore, monks, after knowing this noble truth of suffering, knowledge [of that suffering] is produced. This is a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+7\. “Furthermore, monks, after knowing this noble truth of suffering, knowledge [of that suffering] is produced. This is a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p7}
 
-8\. “Furthermore, after knowing this noble truth of suffering’s accumulation, termination [of that accumulation] is produced. This is a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+8\. “Furthermore, after knowing this noble truth of suffering’s accumulation, termination [of that accumulation] is produced. This is a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p8}
 
-9\. “Furthermore, after knowing this noble truth of suffering’s cessation, realization [of that cessation] is produced. This is a teaching never heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+9\. “Furthermore, after knowing this noble truth of suffering’s cessation, realization [of that cessation] is produced. This is a teaching never heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p9}
 
-10\. “Furthermore, after knowing this noble truth of the path to suffering’s cessation, cultivation [of that path] is produced. This is a teaching not heard before that should be rightly considered. It then gives rise to vision, knowledge, insight, and awakening.
+10\. “Furthermore, after knowing this noble truth of the path to suffering’s cessation, cultivation [of that path] [104a] is produced. This is a teaching not heard before that should be correctly considered. It then gives rise to vision, knowledge, insight, and awakening.
 {: #p10}
 
-11\. “Monks, when vision, knowledge, insight, and awakening hadn’t arisen from the three turnings in 12 steps of these four noble truths, I wouldn’t have ever attained liberation, escape, or separation while among the teachings heard from gods, Māra, Brahmā, ascetics, or priests. Nor would I have realized for myself the unsurpassed and correct enlightenment. Once vision, knowledge, insight, and awakening had arisen from the three turnings in 12 steps of these four noble truths, then I attained escape and liberation while among the teachings heard from gods, Māra, Brahmā, ascetics, and priests. I realized for myself the unsurpassed and correct enlightenment.”
+11\. “Monks, when vision, knowledge, insight, and awakening hadn’t arisen from the three turnings in 12 steps of these four noble truths, I couldn’t have ever attained liberation, escape, and separation while among the teachings heard from gods, Māra, Brahmā, ascetics, or priests. Nor would I have realized for myself the unsurpassed, correct, and complete enlightenment. Once vision, knowledge, insight, and awakening had arisen from the three turnings in 12 steps of these four noble truths, then I attained escape and liberation while among the teachings heard from gods, Māra, Brahmā, ascetics, and priests. I realized for myself the unsurpassed, correct, and complete enlightenment.”
 {: #p11}
 
-12\. When the Bhagavān taught this Dharma, Venerable Kauṇḍinya and 80,000 gods were dustless and spotless, and they attained purity of the Dharma eye.
+12\. When the Bhagavān explained this teaching, Venerable Kauṇḍinya and 80,000 gods became dustless and spotless and attained purification of the Dharma eye.
 {: #p12}
 
-13\. The Bhagavān then addressed Venerable Kauṇḍinya, “Do you know the Dharma yet?”
+13\. The Bhagavān then addressed Venerable Kauṇḍinya, “Have you know the teaching yet?”
 {: #p13}
 
 Kauṇḍinya said to the Buddha, “I’ve known it, Bhagavān!”
 
-14\. Again, he asked Venerable Kauṇḍinya, “Do you know the Dharma yet?”
+14\. Again, he asked Venerable Kauṇḍinya, “Have you know the teaching yet?”
+
 Kauṇḍinya said to the Buddha, “I’ve known it, Sugata!”
 {: #p14}
 
-15\. Having known the Dharma, Venerable Kauṇḍinya was therefore named Ajñāta Kauṇḍinya.
+15\. Having known the teaching, Venerable Kauṇḍinya was therefore called Ajñāta Kauṇḍinya.
 {: #p15}
 
-16\. After Venerable Ajñāta Kauṇḍinya knew the Dharma, the earth spirit raised its voice and called out, “Gentlemen! The Bhagavān has turned the Dharma wheel three times in 12 steps while staying at Ṛṣipatana in the deer preserve of Bārāṇasī. Never has it been turned by ascetics, priests, gods, Māra, or Brahmā. It’s for the benefit of many, for the welfare of many, and with compassion for the world. Because it’s for the benefit and welfare of gods and humans, it will increase the host of gods and diminish the host of asuras!”
+16\. After Venerable Ajñāta Kauṇḍinya knew the teaching, the earth spirit raised its voice and called out, “Gentlemen! The Bhagavān has turned the Dharma wheel three times in 12 steps while staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī. Never has it been turned by ascetics, priests, gods, Māra, or Brahmā. It’s for the benefit of many, for the welfare of many, and with compassion for the world. Because it’s for the benefit and welfare of gods and humans, it will increase the host of gods and diminish the host of asuras!”
 {: #p16}
 
-17\. After the earth spirit called this out, it was heard by the sky spirits and gods in the Cāturmahārāja Heaven, Trāyastriṃśa Heaven, Yama Heaven, Tuṣita Heaven, Nirmāṇarati Heaven, and Paranirmitavaśavartin Heaven. In a moment’s time, they each in turn conveyed the call until it was heard in the Brahmakāyika Heaven. In the Brahma Heavens, they conveyed the call, saying,  “Gentlemen! The Bhagavān has turned the Dharma wheel three times in 12 steps while staying at Ṛṣipatana in the deer preserve of Bārāṇasī. Never has it been turned by ascetics, priests, gods, Māra, or Brahmā, nor by the teachings heard in the world. It’s for the benefit of many and for the welfare of many. Because it’s for the benefit of gods and humans, it will increase the host of gods and diminish the host of asuras!”
+17\. After the earth spirit called this out, it was heard by the sky spirits and gods in the Cāturmahārāja Heaven, Trāyastriṃśa Heaven, Yama Heaven, Tuṣita Heaven, Nirmāṇarati Heaven, and Paranirmitavaśavartin Heaven. In a moment’s time, they each in turn conveyed the call until it was heard in the Brahmakāyika Heaven. In the Brahma Heavens, they conveyed the call, saying, “Gentlemen! The Bhagavān has turned the Dharma wheel three times in 12 steps while staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī. Never has it been turned by ascetics, priests, gods, Māra, or Brahmā, nor by the teachings heard in the world. It’s for the benefit of many and for the welfare of many. Because it’s for the benefit of gods and humans, it will increase the host of gods and diminish the host of asuras!”
 {: #p17}
 
-18\. At Ṛṣipatana in the deer preserve of Bārāṇasī, the Bhagavān turned the Dharma wheel; therefore, this sutra is called “Turning the Dharma Wheel Sūtra.”
+18\. At Ṛṣipatana in the Deer Preserve of Bārāṇasī, the Bhagavān turned the Dharma wheel; therefore, this sūtra is called “Turning the Dharma Wheel.”
 {: #p18}
 
-19\. After the Buddha taught this sutra, the monks who heard what he taught rejoiced and handed it down.
+19\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and handed it down.
 {: #p19}
+
+### Notes
+
+1. {:#n1} This sutra is parallel with <a href="https://suttacentral.net/sn56.11" target="_blank"><em>SN</em> 56.11</a>, T109, and T110. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 24 July 2020
+Last Revised: 25 August 2020
 {: .revised}
 
 ---
