--- a/03_samyukta/SA_13/SA13_74.md
+++ b/03_samyukta/SA_13/SA13_74.md
@@ -11,7 +11,7 @@ next: SA13_75.html
 ## [13. Factors of the Noble Path](index.html)
 ### 74. The Eightfold Path
 
-1\. Thus have I heard: One time, the Buddha stayed at Anāthapiṇḍada Park in Jeta Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “There’s wrong, and there’s right. Listen closely and well consider it. I will explain this for you.
@@ -20,38 +20,42 @@ next: SA13_75.html
 3\. “What’s wrong? This refers to wrong view … wrong concentration. What’s right? This refers to right view … right concentration.
 {: #p3}
 
-4\. “What is right view? That refers to teaching that there’s generosity, there’s the teaching, there are observances, there’s good conduct and bad conduct, and there are the results of good and bad conduct. There’s this world, and there’s the other world. There’s father and mother and the birth of sentient beings. There are arhats who well arrive, are well headed, and know and realize for themselves the perfect abode, whether it’s in this or the other world: ‘My births have ended, the religious practice has been established, the task has been accomplished, and I know I won’t be subject to a later existence.’
+4\. “What’s right view? It’s refers to the teaching that there’s generosity, there’s the teaching, there are observances, there’s good conduct and bad conduct, and there are the results of good and bad conduct. There’s this world, and there’s the other world. There’s father and mother and the birth of sentient beings. There are arhats who well arrive, are well-headed, and know and realize for themselves the perfect abode, whether it’s in this or the other world: ‘My births have been ended, the religious practice has been established, the task has been accomplished. I know that I won’t be subject to a later existence.’
 {: #p4}
 
-5\. “What is right intention? It’s the intent of renunciation, intent without anger, and intent that’s not harmful.
+5\. “What’s right intention? It’s intent of renunciation, intent without anger, and intent that’s not harmful.
 {: #p5}
 
 6\. “What’s right speech? It’s being free of false speech, free of duplicity, free of harsh words, and free of fancy speech.
 {: #p6}
 
-7\. “What is right action? It’s being free of killing, stealing, and sexual misconduct.
+7\. “What’s right action? It’s being free of killing, stealing, and sexual misconduct.
 {: #p7}
 
-8\. “What is right livelihood? It’s pursuing clothing, food and drink, bedding, and medicines in ways according to the Dharma and not contrary to the Dharma.
+8\. “What’s right livelihood? It’s pursuing clothing, food and drink, bedding, and medicine in ways that are according to the teaching and not contrary to the teaching.
 {: #p8}
 
-9\. “What is right method? It’s desire, effort, method, separation, striving, and the capability to work constantly and not retreat.
+9\. “What’s right method? It’s desire, effort, method, setting out, striving, and the capability to work constantly and not retreat.
 {: #p9}
 
-10\. “What is right mindfulness? It’s mindfully following and remembering that’s not false or vacant.
+10\. “What’s right mindfulness? It’s mindfully following and remembering that’s not false or pointless.
 {: #p10}
 
-11\. “What is right concentration? It’s abiding with mind unconfused, resolute, collected, tranquil, concentrated, and single-minded.”
+11\. “What’s right concentration? It’s abiding with mind unconfused, resolute, collected, tranquil, concentrated, and single-minded.”
 {: #p11}
 
-12\. After the Buddha taught this sutra, the monks who heard what he taught rejoiced and handed it down.
+12\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and handed it down.
 {: #p12}
+
+### Notes
+1. {:#n1} Parallels include [SN 45.8](https://suttacentral.net/sn45.8){: target="_blank"}, [SN 45.21](https://suttacentral.net/sn45.21){: target="_blank"}, [SA 13.25](SA13_25.html), and T 112. [\[back\]](#ref1)
+
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 24 July 2020
+Last Revised: 25 August 2020
 {: .revised}
 
 ---
