--- a/04_ekottarika/EA_12_01.md
+++ b/04_ekottarika/EA_12_01.md
@@ -9,108 +9,108 @@ next: EA_19_02.html
 
 # [The Numerical Discourses](../../index.html)
 ## Chapter 12: One Entry to the Path
-### 1. The Four Stations of Mind
+### 1. The Four Stations of Mindfulness
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the country of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There’s one entry to the path that purifies the conduct of sentient beings. It leads them away from grief, has no disturbances, attains great wisdom, and achieves realization of nirvāṇa. That is to say, it will cease the five hindrances and reflect on the four stations of mind. What’s called this one entry? It refers to focusing on one thought. This is called one entry. What is this path? It refers to the noble eightfold path: 1) right view, 2) right governance, 3) right action, 4) right livelihood, 5) right method, 6) right speech, 7) right mindfulness, and 8) right concentration. These are called the path, and this is the one entry to the path.
+2\. It was then that the Bhagavān addressed the monks, “There’s one entry to the path that purifies the conduct of sentient beings and rids them of grief. Having any vexations, they attain great wisdom and achieve realization of nirvāṇa. That is, they will cease the five hindrances and reflect on the four stations of mindfulness. What’s called this one entry? It refers to focusing the mind. This is called the one entry. What is the path? It refers to the noble eightfold path, which is 1. right view, 2. right control, 3. right action, 4. right livelihood, 5. right method, 6. right speech, 7. right mindfulness, and 8. right concentration. These are called the path, and this is called the one entry to that path.
 {: #p2}
 
-3\. “What are the five hindrances that it will cease? That refers to the hindrance of desire, hindrance of anger, hindrance of restlessness, hindrance of drowsiness, and the hindrance of doubt. These are called the five hindrances that it will cease.
+3\. “What are the five hindrances that will cease? That refers to the hindrance of desire, hindrance of anger, hindrance of restlessness, hindrance of drowsiness, and hindrance of doubt. These are called the five hindrances that will cease.
 {: #p3}
 
-4\. “What is reflection on the four stations of mind? Here, a monk contemplates his own body internally, turning away bad thoughts and having no grief. He contemplates his own body externally, turning away bad thoughts and having no grief. He contemplates his body internally and externally, turning away bad thoughts and having no grief. He contemplates feelings as feelings internally and relaxes. He contemplates feelings as feelings externally and contemplates feelings as feelings internally and externally. He contemplates his mind internally and relaxes. He contemplates mind externally and contemplates mind internally and externally. He contemplates principles internally, contemplates principles externally, and contemplates principles internally and externally as he relaxes.
+4\. “How do they reflect on the four stations of mindfulness? Here, a monk contemplates his own body internally, turning away bad thoughts and having no grief. He contemplates his own body externally, turning away bad thoughts and having no grief. He contemplates his body internally and externally, turning away bad thoughts and having no grief. He contemplates feelings as feelings internally and relaxes himself. He contemplates feelings as feelings externally and contemplates feelings as feelings internally and externally. He contemplates his mind internally and relaxes himself. He contemplates mind externally and contemplates mind internally and externally. He contemplates principles internally, contemplates principles externally, and contemplates principles internally and externally as he relaxes himself.
 {: #p4}
 
 #### Contemplation of Body
 
-5\. “How does a monk contemplate his body internally and relaxes? Here, a monk contemplates this body according to its nature and activity. From head to toe and from toe to head, he contemplates all the impurities in his body, none of which are desirable. Just as he observes this body with its hair, beard, nails, teeth, sinews, bones, marrow, brain, fat, intestines, stomach, heart, liver, spleen, and kidneys, he observes and knows them all these parts. He should observe and know its dung, urine, vomit, diarrhea, tears, spit, blood, grease, and bile, none of which are desirable. Thus, monks, you should contemplate the body and relax, turning away bad thoughts and having no grief.
+5\. “How does a monk contemplate his body internally and relax himself? Here, a monk contemplates this body according to its nature and activity. From head to toe and from toe to head, he contemplates all the impurities in his body, none of which are desirable. Just as he observes this body with its hair, beard, nails, teeth, skin, flesh, sinews, bones, marrow, brain, fat, intestines, stomach, heart, liver, spleen, and kidneys, he observes and knows them all these related parts. He should observe and know its dung, urine, vomit, diarrhea, tears, spit, blood, grease, and bile, none of which are desirable.[\[2\]](#n2){:#ref2} Thus, monks, you should contemplate the body and relax yourselves, turning away bad thoughts and having no grief.
 {: #p5}
 
-6\. “Furthermore, a monk returns to contemplating this body as possessing the earth element and the elements of water, fire, and air. Thus, a monk contemplates this body.
+6\. “Furthermore, a monk returns to contemplating this body: ‘Does it possess the earth element or the elements of water, fire, and air?’ Thus, a monk contemplates this body.
 {: #p6}
 
-7\. “Furthermore, a monk contemplates this body by discerning its elements: ‘This body has four elements.’ He’s just like a butcher or a butcher’s apprentice cutting a cow apart. He examines and sees for himself, ‘This is the leg. This is the heart. This is the joint. This is the head.’ Thus, that monk discerns these elements when he examines his body as having the elements of earth, water, fire, and air. Thus, a monk contemplates [568b] the body and relaxes.
+7\. “Furthermore, a monk contemplates this body by discerning its elements: ‘This body has four elements.’ Just like a butcher or a butcher’s apprentice cutting up a cow, he examines and sees for himself, ‘This is the leg. This is the heart. This is the joint. This is the head.’ Thus, that monk discerns these elements when he examines his body as having the elements of earth, water, fire, and air. Thus, a monk contemplates [568b] the body and relaxes himself.
 {: #p7}
 
 8\. “Furthermore, a monk contemplates this body as having orifices from which impurities flow. He’s like someone viewing a bamboo park or looking at a stand of reeds. Thus, the monk contemplates this body as having orifices from which impurities flow.
 {: #p8}
 
-9\. “Furthermore, a monk contemplates a corpse that’s been dead for one night, two nights, three nights, four nights, five nights, six nights, or seven nights. The body is bloated, putrid, and impure. Again, he contemplates his own body as no different from it: ‘My body will not escape this fate.’ Suppose, again, a monk contemplates a corpse that’s been pecked and eaten by crows and owls or that’s been eaten by animals like tigers, wolves, jackals, and insects. Again, he examines his own body as no different from it: ‘My body will not be free of this fate.’ This is called a monk contemplating the body and relaxing.
+9\. “Furthermore, a monk contemplates a corpse that’s been dead for one night, two nights, three nights, four nights, five nights, six nights, or seven nights. The body is bloated, putrid, and impure. Again, he contemplates his own body as being no different from it: ‘My body will not escape this fate.’ Suppose, again, a monk contemplates a corpse that’s been pecked and eaten by crows and owls or that’s been eaten by animals like tigers, wolves, jackals, and insects. Again, he examines his own body as being no different from it: ‘My body will not be free of this fate.’ This is called a monk contemplating the body and relaxing himself.
 {: #p9}
 
-10\. “Furthermore, a monk contemplates a corpse. Perhaps it’s half eaten and scattered on the ground, putrid and impure. Again, he contemplates his own body as no different from it: ‘My body will not be free of state.’
+10\. “Furthermore, a monk contemplates a corpse. Perhaps it’s half eaten and scattered on the ground, putrid and impure. Again, he contemplates his own body as being no different from it: ‘My body will not be free of state.’
 {: #p10}
 
-11\. “Furthermore, he contemplates a corpse that’s only bones with its flesh gone and smeared with blood. Again, he contemplates this body and that body as having no difference. Thus, a monk contemplates this body.
+11\. “Furthermore, he contemplates a corpse that’s only bones with its flesh gone and smeared with blood. Again, he contemplates this body and that body as having no difference from it. Thus, a monk contemplates this body.
 {: #p11}
 
-12\. “Furthermore, a monk contemplates a corpse [that’s like] a bundle of wood wrapped in sinews. Again, he contemplates his own body and that one as having no difference. Thus, a monk contemplates this body.
+12\. “Furthermore, a monk contemplates a corpse [that’s like] a bundle of wood wrapped in sinews. Again, he contemplates his own body and that as having no difference. Thus, a monk contemplates this body.
 {: #p12}
 
-13\. “Furthermore, a monk contemplates a corpse that has it’s bones and sinews separated and scattered in different places. Perhaps a hand bone and a leg bone are each in one place. Perhaps there’s a kneecap, a pelvic bone, a rump bone, an arm bone, a shoulder bone, a rib bone, a backbone, a neck bone, or a skull. Again, he contemplates his body and that one as having no difference: ‘I won’t escape this state; my body will also disintegrate.’ Thus, a monk contemplates the body and relaxes.
+13\. “Furthermore, a monk contemplates a corpse that has it’s bones and sinews separated and scattered in different places. Perhaps a hand bone and a leg bone are both in one place. Perhaps there’s a kneecap, a pelvic bone, a rump bone, an arm bone, a shoulder bone, a rib bone, a backbone, a neck bone, or a skull there. Again, he contemplates this body and that as having no difference: ‘I won’t escape this state; my body will also disintegrate.’ Thus, a monk contemplates the body and relaxes himself.
 {: #p13}
 
-14\. “Furthermore, a monk contemplates a corpse that’s white or white shell colored. Again, he contemplates his own body and that one as having no difference: ‘I’m won’t be free of this state.’ This is called a monk contemplating his own body.
+14\. “Furthermore, a monk contemplates a corpse that’s white or white shell-colored. Again, he contemplates his own body and that as having no difference: ‘I’m won’t be free of this state.’ This is called a monk contemplating his own body.
 {: #p14}
 
-15\. “Furthermore, suppose a monk sees a corpse and perceives its bones and blueish contusions, none of which are desirable. Perhaps there’s ashes or dust that make it all the same color and indiscernible. Thus, a monk contemplates his own body, turning away bad thoughts and having no grief: ‘This body is impermanent and will become something that’s scattered.’ Thus, a monk contemplates his body internally, contemplates his body externally, and understands it as nothing at all.
+15\. “Furthermore, suppose a monk sees a corpse and perceives its bones and blueish contusions, none of which are desirable. Perhaps there’s ashes or dust that makes it all the same color and indiscernible. Thus, a monk contemplates his own body, turning away bad thoughts and having no grief: ‘This body is impermanent and will become something that’s scattering.’ Thus, a monk contemplates his body internally, contemplates his body externally, and understands it as being nothing at all.
 {: #p15}
 
 #### Contemplation of Feeling
 
-16\. “How does a monk contemplate feeling as feeling internally? Here, when a monk has a pleasant feeling, then he is aware, ‘I’m having a pleasant feeling.’ When he has a painful feeling, then he’s aware, ‘I’m having a painful experience.’ When he has a feeling that’s not pleasant or painful, [568c] then he’s aware, ‘I’m having a feeling that’s not pleasant or painful.’
+16\. “How does a monk contemplate feeling as feeling internally? Here, when a monk has a pleasant feeling, then he is aware, ‘I’m having a pleasant feeling.’ When he has a painful feeling, then he’s aware, ‘I’m having a painful experience.’ When he has a feeling that’s neither pleasant nor painful, [568c] then he’s aware, ‘I’m having a feeling that’s neither pleasant nor painful.’
 {: #p16}
 
-17\. “If he has a pleasant feeling from food, then he’s aware, ‘I’m having a pleasant feeling from food.’ If he has a painful feeling from food, then he’s aware, ‘I’m having a painful feeling from food.’ When he has a feeling that’s not pleasant or painful from food, then he’s aware, ‘I’m having a feeling that’s not pleasant or painful from food.’
+17\. “If he has a pleasant feeling from food, then he’s aware, ‘I’m having a pleasant feeling from food.’[\[3\]](#n3){:#ref3} If he has a painful feeling from food, then he’s aware, ‘I’m having a painful feeling from food.’ When he has a feeling that’s neither pleasant nor painful from food, then he’s aware, ‘I’m having a feeling that’s neither pleasant nor painful from food.’
 {: #p17}
 
-18\. “If he has a pleasant feeling not from food, then he’s aware, ‘I’m having a pleasant feeling not from food.’ If he has a painful feeling not from food, then he’s aware, ‘I’m having a painful feeling not from food.’ When he has a feeling that’s not pleasant or painful and not from food, then he’s aware, ‘I’m having a feeling that’s not pleasant or painful and not from food.’ Thus, a monk contemplates feeling internally.
+18\. “If he has a pleasant feeling not from food, then he’s aware, ‘I’m having a pleasant feeling not from food.’ If he has a painful feeling not from food, then he’s aware, ‘I’m having a painful feeling not from food.’ When he has a feeling that’s neither pleasant nor painful and not from food, then he’s aware, ‘I’m having a feeling that’s neither pleasant nor painful and not from food.’ Thus, a monk contemplates feeling internally.
 {: #p18}
 
-19\. “Furthermore, when a monk has a pleasant feeling, at that point he isn’t having a painful feeling. At that point, he’s aware, ‘I’m experiencing a pleasant feeling.’ When he has a painful feeling, at that point he isn’t having a pleasant feeling. He’s aware, ‘I’m experiencing a painful feeling.’ If he has a feeling that’s not painful or pleasant, at that point there’s no pain or pleasure. He’s aware, ‘I’m experiencing a feeling that’s not painful or pleasant.’
+19\. “Furthermore, when a monk has a pleasant feeling, at that point he isn’t having a painful feeling. He’s then aware, ‘I’m experiencing a pleasant feeling.’ When he has a painful feeling, at that point he isn’t having a pleasant feeling. He’s then aware, ‘I’m experiencing a painful feeling.’ If he has a feeling that’s neither pleasant nor painful, at that point he isn’t having pain or pleasure. He’s aware, ‘I’m experiencing a feeling that’s neither pleasant nor painful.’
 {: #p19}
 
-20\. “As with those states of coming together, he relaxes and observes the states of ending. Again, he contemplates [both] states of coming together and ending. Perhaps, again, he has a feeling that he can know and see directly in the present and reflect on its origin. Without depending on anything, he relaxes and doesn’t produce worldly perceptions. In that regard, he still is not frightened. Not being frightened, then he attains nirvāṇa: ‘Birth has ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
+20\. “As those states come together, he relaxes himself and also observes those states ending. Again, he contemplates [both] the coming together and ending of those states. Perhaps, again, he has a feeling that he can know and see directly in the present and reflect on its source. Without depending on anything, he relaxes himself and doesn’t produce worldly perceptions. In that regard, he still is not frightened. Not being frightened, then he attains nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
 {: #p20}
 
 21\. “Thus, a monk contemplates his own feelings internally, turning away confused thoughts and having no grief. He contemplates his own feelings externally and contemplates feelings internally and externally, turning away confused thoughts and having no grief. Thus, a monk contemplates feelings internally and externally.
 
 #### Contemplation of Mind
 
-22\. “How does a monk contemplate mental states as mind and relax? Here, a monk has a mental state with craving, and then he’s aware, ‘I have a mental state with craving.’ He has a mental state without craving, and he’s also aware, ‘I have a mental state without craving.’ He has a mental state with anger and then is aware, ‘I have a mental state with anger.’ He has a mental state without anger, and he’s also aware, ‘I have a mental state without anger.’ He has a mental state with delusion, and then he’s aware, ‘I have a mental state with delusion.’ He has a mental state without delusion, and he’s also aware, ‘I have a mental state without delusion.’
+22\. “How does a monk contemplate mental states as mind and relax himself? Here, a monk has a mind with craving, and then he’s aware, ‘I have a mind with craving.’ He has a mind without craving, and he’s also aware, ‘I have a mind without craving.’ He has a mind with anger, and then he’s aware, ‘I have a mind with anger.’ He has a mind without anger, and he’s also aware, ‘I have a mind without anger.’ He has a mind with delusion, and then he’s aware, ‘I have a mind with delusion.’ He has a mind without delusion, and he’s also aware, ‘I have a mind without delusion.’
 {: #p22}
 
-23\. “He has a thought of craving, and he’s aware, ‘I have a thought of craving.’ He has a thought without craving, and he’s aware, ‘I have a thought without craving.’ Having a collected mind, he’s aware ‘I have a collected mind.’ Having an uncollected mind, he’s aware, ‘I have an uncollected mind.’ Having a confused mind, he’s aware, ‘I have a confused mind.’ Having an unconfused mind, he’s aware, ‘I have an unconfused mind.’ Having a distracted mind, he’s also aware, ‘I have a distracted mind.’ Having an undistracted mind, he’s aware, ‘I have an undistracted mind.’ Having a pervading mind, he’s aware, ‘I have a pervading mind.’ Having a mind that’s not pervading, he’s aware, ‘I have a mind that’s not pervading.’ Having a great mind, he’s aware, ‘I have a great mind.’ Without a great mind, he’s aware, ‘I’m without a great mind.’ Having a measureless mind, he’s aware, ‘I have a measureless mind.’ Without a measureless mind, he’s aware, ‘I’m without a measureless mind.’ Having a concentrated mind, he’s aware, ‘I have a concentrated mind.’ Without a concentrated mind, he’s aware, ‘I’m without a concentrated mind.’ With a mind yet to be liberated, he’s aware, ‘My mind has yet to be liberated.’ With a mind that has been liberated, he’s aware, ‘My mind has been liberated.’ Thus, a monk contemplates attributes of mind as a station of mind.
+23\. “He has a thought of craving, and he’s aware, ‘I have a thought of craving.’ He has a thought without craving, and he’s aware, ‘I have a thought without craving.’ Having a collected mind, he’s aware ‘I have a collected mind.’ Having an uncollected mind, he’s aware, ‘I have an uncollected mind.’ Having a confused mind, he’s aware, ‘I have a confused mind.’ Having an unconfused mind, he’s aware, ‘I have an unconfused mind.’ Having a distracted mind, he’s also aware, ‘I have a distracted mind.’ Having an undistracted mind, he’s aware, ‘I have an undistracted mind.’ Having a pervading mind, he’s aware, ‘I have a pervading mind.’ Having a mind that’s not pervading, he’s aware, ‘I have a mind that’s not pervading.’ Having a great mind, he’s aware, ‘I have a great mind.’ Without a great mind, he’s aware, ‘I’m without a great mind.’ Having a measureless mind, he’s aware, ‘I have a measureless mind.’ Without a measureless mind, he’s aware, ‘I’m without a measureless mind.’ Having a concentrated mind, he’s aware, ‘I have a concentrated mind.’ Without a concentrated mind, he’s aware, ‘I’m without a concentrated mind.’ With a mind yet to be liberated, he’s aware, ‘My mind has yet to be liberated.’ With a mind that has been liberated, he’s aware, ‘My mind has been liberated.’ Thus, a monk contemplates attributes of mind as a station of mindfulness.
 {: #p23}
 
-24\. “He contemplates states of coming together, contemplates states of ending, and contemplates [both] states of coming together and ending. He contemplates the states of reflection and relaxes. He depends on nothing that can be known, can be seen, can be considered, and can’t be considered and doesn’t produce worldly perceptions. Once he doesn’t produce worldly perceptions, then he has no fear. Once he has no fear, then nothing remains. Once nothing remains, then he [enters] nirvāṇa: ‘Birth has ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
+24\. “He contemplates those states coming together, contemplates those states ending, and contemplates [both] the coming together and ending of those states. He contemplates the states of reflection and relaxes himself. He depends on nothing that can be known, can be seen, can be considered, and can’t be considered, and he doesn’t produce worldly perceptions. Once he doesn’t produce worldly perceptions, then he has no fear. Once he has no fear, then nothing remains. Once nothing remains, then he [enters] nirvāṇa: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
 {: #p24}
 
-25\. “Thus is a monk’s station of mind that contemplates mind as mind internally, turning away confused thoughts and having no grief. This is the station of mind that contemplates mind externally and contemplates mind internally and externally. Thus is a monk’s station of mind that contemplates mental attributes as mind.
+25\. “Thus is a monk’s station of mindfulness that contemplates mind as mind internally, turning away confused thoughts and having no grief. This is the station of mindfulness that contemplates mind externally and contemplates mind internally and externally. Thus, a monk contemplates mental attributes as mind as a station of mindfulness.
 
 #### Contemplation of Principles
 
-26\. “What is a monk’s station of mind that contemplates the attributes of principles as principles? Here, a monk cultivates the awakening factor of mindfulness based on the lack of desire and cessation and abandons bad qualities. He cultivates the awakening factor of [discriminating] qualities, cultivates the awakening factor of  effort, cultivates the awakening factor of joy, cultivates the awakening factor of calm, cultivates the awakening factor of concentration, and cultivates the awakening factor of guarding based on contemplation, lack of desire, and cessation and abandons bad qualities. Thus is a monk’s station of mind that contemplates the attributes of principles as principles.
+26\. “What is a monk’s station of mindfulness that contemplates the attributes of principles as principles? Here, a monk cultivates the awakening factor of mindfulness based on absence of desire and based on cessation to abandon bad qualities. He cultivates the awakening factor of qualities, cultivates the awakening factor of  effort, cultivates the awakening factor of joy, cultivates the awakening factor of calm, cultivates the awakening factor of concentration, and cultivates the awakening factor of equanimity based on contemplation, based absence of desire, and based on cessation to abandon bad qualities. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p26}
 
-27\. “Furthermore, a monk is liberated from craving and eliminates bad and unwholesome qualities. With perception and contemplation, he calms his thoughts. Delighting in the first meditation, he relaxes. Thus is a monk’s station of mind that contemplates the attributes of principles as principles.
+27\. “Furthermore, a monk is liberated from craving and eliminates bad and unwholesome qualities. With perception, contemplation, and calm thoughts, he delights in the first meditation and relaxes himself. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p27}
 
-28\. “Furthermore, a monk abandons having perception and contemplation, and gives rise to inner joy. He focuses on a single thought and achieves the lack of perception and contemplation. Mindful, calm, joyous, and peaceful, he accomplishes the second meditation and relaxes.
+28\. “Furthermore, a monk abandons having perception and contemplation and gives rise to inner joy. He focuses his concentration and achieves the absence of perception and contemplation. Mindful, calm, joyous, and peaceful, he accomplishes the second meditation and relaxes himself. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p28}
 
-29\. “Furthermore, a monk abandons thought and cultivates guarding. Constantly aware of his own personal happiness that’s sought by the noble people. Guarded, mindful, and pure, he practices the third meditation. Thus is a monk’s station of mind that contemplates attributes of principles as principles.
+29\. “Furthermore, a monk is detached from thought and cultivates equanimity. He’s constantly aware of his own personal happiness that’s sought by the noble ones, and his equanimity and mindfulness are pure as he practices the third meditation. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p29}
 
-30\. “Furthermore, a monk abandons painful and pleasant mental states. No longer sad or joyous and without pain or pleasure, he’s guarded, mindful, and pure, delighting in the fourth meditation. Thus is a monk’s station of mind that contemplates attributes of principles as principles.
+30\. “Furthermore, a monk is detached from the mind of pleasure and pain. No longer sad or joyous and without pleasure or pain, his equanimity and mindfulness are pure as he delights in the fourth meditation. Thus, a monk contemplates the attributes of principles as principles as a station of mindfulness.
 {: #p30}
 
-31\. “Those practices are things that come together, things that end, and things that both come together and end as he relaxes. He then attains the station of mind regarding principles directly in the present. He can know and see and turns away from confused perceptions. He doesn’t depend on anything and doesn’t produce worldly perceptions. After he doesn’t produce perceptions, then he has no fear. After he has no fear, then birth ends. ‘The religious practice is established, and the task is accomplished. I’m no longer subject to existence and know it as it really is.’
+31\. “As the states of those practices come together, end, and both come together and end, he relaxes himself. He then attains the station of mindfulness regarding principles directly in the present. He can know and see, and he turns away from confused perceptions. He doesn’t depend on anything and doesn’t produce worldly perceptions. After he doesn’t produce perceptions, then he has no fear. After he has no fear, then [he knows]: ‘Birth has been ended, the religious practice is established, and the task is accomplished. I’m no longer subject to existence and know it as it really is.’
 {: #p31}
 
-32\. “Monks, relying on this one entry to the path, sentient beings attain purity, part with grief, and no longer have perceptions of joy. They then obtain wisdom and attain realization of nirvāṇa. That is to say, they cease the five hindrances and cultivate the four stations of mind.”
+32\. “Monks, relying on this one entry to the path, sentient beings attain purification, part with grief, and no longer have perceptions of joy. They then obtain wisdom and realization of nirvāṇa. That is, they cease the five hindrances and cultivate the four stations of mindfulness.”
 {: #p32}
 
 33\. The monks who heard what the Buddha taught then rejoiced and handed it down.
@@ -118,6 +118,8 @@ next: EA_19_02.html
 
 ### Notes
 1. {:#n1} Parallels include [MN 10](https://suttacentral.net/mn10){: target="_blank"} and [MA 98](../02_madhyama/02_Lesser_Lands_and_Cities/09_Cause/MA_098.html){: target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} *vomit, diarrhea*. The Chinese indicates two items, 生熟二藏, or 生藏 and 熟藏. These terms appear to be literal translations of āma-aśaya and pakva-aśaya, which mean “raw organ” and “ripened organ,” which are Indian idioms for the stomach and colon. Given the context here, in a list of bodily fluids and contents, this would seem to refer to the contents of the stomach and the large intestine. [\[back\]](#ref2)
+3. {:#n3} *from food*. The Pali parallel has the term sāmisa for this and nirāmisa as the negation “not from food” in the next paragraph. It’s interesting to note that in Pali sāmisa can have the sense of “meat in food.” Skt. āmiṣa can simply refer to food, and this is how the Chinese translator interpreted it. [\[back\]](#ref3)
 
 ---
 
